朱朱的项目

--- a/gmall-manage-service/src/main/resources/application.properties
+++ b/gmall-manage-service/src/main/resources/application.properties
@@ -10,3 +10,7 @@ spring.datasource.username=root
 spring.datasource.password=101219
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
+
+mybatis.mapper-locations=classpath:mapper/*Mapper.xml
+mybatis.configuration.mapUnderscoreToCamelCase=true
+
